--- a/Views/client/Destination.cshtml
+++ b/Views/client/Destination.cshtml
@@ -130,11 +130,11 @@
                                     <div class="destination-item style-two" data-aos="flip-up" data-aos-duration="1500" data-aos-offset="50">
                                         <div class="image">
                                             <a href="#" class="heart"><i class="fas fa-heart"></i></a>
-                                            <img src="@dest.ImageUrl" alt="@dest.DestinationName">
+                                            <img src="@dest.ImageURL" alt="@dest.DestinationName">
                                         </div>
                                         <div class="content">
-                                            <h6><a href="/destination/details/@dest.DestinationId">@dest.DestinationName</a></h6>
-                                            <a href="/destination/details/@dest.DestinationId" class="more"><i class="fas fa-chevron-right"></i></a>
+                                            <h6><a href="/destination/details/@dest.DestinationID">@dest.DestinationName</a></h6>
+                                            <a href="/destination/details/@dest.DestinationID" class="more"><i class="fas fa-chevron-right"></i></a>
                                         </div>
                                     </div>
                                 </div>
