--- a/Views/client/tour-details.cshtml
+++ b/Views/client/tour-details.cshtml
@@ -231,7 +231,7 @@
                                 <button type="button" id="customCalcBtn" class="theme-btn style-two w-100 mb-2" style="border-radius:8px;">Tính tổng</button>
                                 <hr>
                                 <h6 style="font-weight:600;">Total: <span class="price" id="customTotal">0</span> đ</h6>
-                                <button type="submit" class="theme-btn style-two w-100 mt-2" style="border-radius:8px;">Đặt tour với VNPAY</button>
+                                <button type="submit" class="theme-btn style-two w-100 mt-2" style="border-radius:8px; background: #a50064; border-color: #a50064; color: #fff;">Đặt tour với MoMo <img src='/assets/images/momo-logo.png' alt='MoMo' style='height:20px;margin-left:8px;vertical-align:middle;'/></button>
                             </form>
                         </div>
 
@@ -645,9 +645,9 @@
                                         <span data-hover="Calculate Total">Calculate Total</span>
                                         <i class="fal fa-calculator"></i>
                                     </button>
-                                    <button type="submit" class="theme-btn style-two w-100 mt-15 mb-5">
-                                        <span data-hover="Book Now">Book Now</span>
-                                        <i class="fal fa-arrow-right"></i>
+                                    <button type="submit" class="theme-btn style-two w-100 mt-15 mb-5" style="background: #a50064; border-color: #a50064; color: #fff;">
+                                        <span data-hover="Thanh toán MoMo">Thanh toán MoMo</span>
+                                        <img src='/assets/images/momo-logo.png' alt='MoMo' style='height:20px;margin-left:8px;vertical-align:middle;'/>
                                     </button>
                                     <div class="text-center">
                                         <a href="contact.html">Need some help?</a>
