--- a/Views/provider/ProviderTour.cshtml
+++ b/Views/provider/ProviderTour.cshtml
@@ -220,16 +220,16 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="mb-3">
-                                    <label for="addDestinationId" class="form-label">Destination ID</label>
-                                    <input type="number" class="form-control" id="addDestinationId" name="DestinationId" min="1">
+                                    <label for="addDestinationID" class="form-label">Destination ID</label>
+                                    <input type="number" class="form-control" id="addDestinationID" name="DestinationID" min="1">
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="mb-3">
-                                    <label for="addCategoryId" class="form-label">Category ID</label>
-                                    <input type="number" class="form-control" id="addCategoryId" name="CategoryId" min="1">
+                                    <label for="addCategoryID" class="form-label">Category ID</label>
+                                    <input type="number" class="form-control" id="addCategoryID" name="CategoryID" min="1">
                                 </div>
                             </div>
                         </div>
@@ -336,16 +336,16 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="mb-3">
-                                    <label for="editDestinationId" class="form-label">Destination ID</label>
-                                    <input type="number" class="form-control" id="editDestinationId" name="DestinationId" min="1">
+                                    <label for="editDestinationID" class="form-label">Destination ID</label>
+                                    <input type="number" class="form-control" id="editDestinationID" name="DestinationID" min="1">
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="mb-3">
-                                    <label for="editCategoryId" class="form-label">Category ID</label>
-                                    <input type="number" class="form-control" id="editCategoryId" name="CategoryId" min="1">
+                                    <label for="editCategoryID" class="form-label">Category ID</label>
+                                    <input type="number" class="form-control" id="editCategoryID" name="CategoryID" min="1">
                                 </div>
                             </div>
                         </div>
@@ -535,8 +535,8 @@
             document.getElementById("editEndDate").value = end;
             document.getElementById("editMaxSeats").value = max;
             document.getElementById("editAvailableSeats").value = avail;
-            document.getElementById("editDestinationId").value = destId;
-            document.getElementById("editCategoryId").value = catId;
+            document.getElementById("editDestinationID").value = destId;
+            document.getElementById("editCategoryID").value = catId;
         }
 
         function selectImage(element, imagePath) {
