--- a/Views/admin/destination_admin/DestinationAdmin.cshtml
+++ b/Views/admin/destination_admin/DestinationAdmin.cshtml
@@ -127,7 +127,7 @@
                                                 data-bs-toggle="modal"
                                                 data-bs-target="#editModal"
                                                 onclick="fillEditModal(
-                                                '@destination.DestinationId',
+                                                '@destination.DestinationID',
                                                 '@destination.DestinationName',
                                                 '@(destination.Description ?? "")',
                                                 '@(destination.Location ?? "")',
@@ -138,7 +138,7 @@
                                         <button class="action-btn delete"
                                                 data-bs-toggle="modal"
                                                 data-bs-target="#deleteModal"
-                                                onclick="setDeleteDestinationId('@destination.DestinationId')">
+                                                onclick="setDeleteDestinationID('@destination.DestinationID')">
                                             <i class="fas fa-trash"></i>
                                         </button>
                                     </div>
@@ -243,7 +243,7 @@
                 </div>
                 <div class="modal-body">
                     <form action="/admin/destination-admin/update" method="POST" enctype="multipart/form-data">
-                        <input type="hidden" name="DestinationId" id="editDestinationId">
+                        <input type="hidden" name="DestinationID" id="editDestinationID">
 
                         <div class="row">
                             <div class="col-md-6">
@@ -326,7 +326,7 @@
                 <form method="post" action="/admin/destination-admin/delete-confirm">
                     <div class="modal-body">
                         <p>Are you sure you want to delete this destination?</p>
-                        <input type="hidden" name="id" id="deleteDestinationId" />
+                        <input type="hidden" name="id" id="deleteDestinationID" />
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
