--- a/Views/client/Tour-list.cshtml
+++ b/Views/client/Tour-list.cshtml
@@ -295,7 +295,7 @@
                                     {
                                         if (tourImage.IsCover == true)
                                         {
-                                            coverImage = tourImage.ImageURL ?? coverImage;
+                                            coverImage = tourImage.ImageUrl ?? coverImage;
                                             break;
                                         }
                                     }
